crates/syntax/src/snapshots/syntax__parser__test__parse_identifier.snap
---
source: crates/syntax/src/parser.rs
expression: parsed
---
{
  "Ok": {
    "span": "",
    "value": {
      "name": "hello_world"
    }
  }
}
