crates/syntax/src/snapshots/syntax__parser__test__parse_identifier_fail.snap
---
source: crates/syntax/src/parser.rs
expression: parsed
---
{
  "Err": {
    "Parse": {
      "UnrecognizedToken": {
        "found": {
          "source": "",
          "located": {
            "span": "",
            "value": "1"
          }
        },
        "expected": "identifier"
      }
    }
  }
}
