crates/syntax/src/snapshots/syntax__parser__test__parse_type.snap
---
source: crates/syntax/src/parser.rs
expression: parsed
---
{
  "Ok": {
    "span": "",
    "value": "Bool"
  }
}
