crates/syntax/src/snapshots/syntax__parser__test__parse_type_fail.snap
---
source: crates/syntax/src/parser.rs
expression: parsed
---
{
  "Err": {
    "ExpectedType": {
      "found": {
        "source": "",
        "located": {
          "span": "",
          "value": "1"
        }
      }
    }
  }
}
