crates/syntax/src/snapshots/syntax__parser__test__parse_typed_param_fail.snap
---
source: crates/syntax/src/parser.rs
expression: parsed
---
{
  "Err": {
    "UnrecognizedToken": {
      "found": {
        "source": "",
        "located": {
          "span": "",
          "value": "EOF"
        }
      },
      "expected": ":"
    }
  }
}
