crates/syntax/src/snapshots/syntax__parser__test__parse_typed_param_multi.snap
---
source: crates/syntax/src/parser.rs
expression: parsed
---
{
  "Ok": [
    {
      "name": {
        "span": "",
        "value": {
          "name": "a"
        }
      },
      "ty": {
        "span": "",
        "value": {
          "Struct": "Alpha"
        }
      }
    },
    {
      "name": {
        "span": "",
        "value": {
          "name": "b"
        }
      },
      "ty": {
        "span": "",
        "value": "U64"
      }
    },
    {
      "name": {
        "span": "",
        "value": {
          "name": "c"
        }
      },
      "ty": {
        "span": "",
        "value": "Bool"
      }
    }
  ]
}
