crates/syntax/src/snapshots/syntax__parser__test__parse_typed_param_single.snap
---
source: crates/syntax/src/parser.rs
expression: parsed
---
{
  "Ok": [
    {
      "name": {
        "span": "",
        "value": {
          "name": "a"
        }
      },
      "ty": {
        "span": "",
        "value": {
          "Struct": "Alpha"
        }
      }
    }
  ]
}
